# GuitarPedal

./: .gitignore  .gitmodules  README.md
.github/workflows/: deploy-pages.yml
1590A/Base/: Base.kicad_pcb  Base.kicad_prl  Base.kicad_pro  Base.kicad_sch  Base.wbk  input.kicad_sch  output.kicad_sch  sim.kicad_sch
1590A/Plain/: Plain.kicad_pcb  Plain.kicad_prl  Plain.kicad_pro  Plain.kicad_sch  Plain.wbk  input.kicad_sch  sim.kicad_sch
1590B/Base/: Base.kicad_pcb  Base.kicad_prl  Base.kicad_pro  Base.kicad_sch  Base.wbk  fp-lib-table  input.kicad_sch  output.kicad_sch  sim.kicad_sch  spice
1590LB/Boost/: Boost.kicad_pcb  Boost.kicad_prl  Boost.kicad_pro  Boost.kicad_sch  Boost.wbk  boost.kicad_sch  enclosure.scad  sim.kicad_sch  sym-lib-table
DaisySeed/: DaisySeed.kicad_pcb  DaisySeed.kicad_prl  DaisySeed.kicad_pro  DaisySeed.kicad_sch  fp-lib-table  spice  sym-lib-table
Documentation/: Hothouse-pedal-conversion
Documentation/Passthrough/: Notes.md
Enclosure/: 1590B-box.step  Drill-1590B.txt
Hardware/: .gitignore  insert.scad  tayda-drill-service.txt
Hardware/Models/: CK-6.35-Stereo.scad  PJ-320D.scad
Hardware/audio-jacks/: audio-jacks.kicad_pcb  audio-jacks.kicad_prl  audio-jacks.kicad_pro  audio-jacks.kicad_sch
Hardware/codec/: codec.kicad_pcb  codec.kicad_prl  codec.kicad_pro  codec.kicad_sch
Hardware/pedal-board/: fp-lib-table  pedal-board.kicad_pcb  pedal-board.kicad_prl  pedal-board.kicad_pro  pedal-board.kicad_sch  sym-lib-table
Hardware/rotary/: fp-lib-table  rotary.kicad_pcb  rotary.kicad_prl  rotary.kicad_pro  rotary.kicad_sch  rp2354.kicad_sch  sym-lib-table
Hardware/rp2354/: rp2354.kicad_pcb  rp2354.kicad_prl  rp2354.kicad_pro  rp2354.kicad_sch
Hardware/single-input/: design-block-lib-table  single-input.kicad_pcb  single-input.kicad_prl  single-input.kicad_pro  single-input.kicad_sch
Hardware/symbols/: AFH-5-S12FIA-1H.kicad_mod  AOTA-B2016.kicad_mod  BM28B0.6-24DP.kicad_mod  BM28B0.6-24DS.kicad_mod  CK-6.35-308.step  CK-6.35-Stereo.step  CK-6.35-no-NPTH.kicad_mod  DFN-6_1.6x1.3mm_P0.4mm.step  Daier PBS-24B-2.kicad_mod  LED_WS2812B-2020.step  L_0806.kicad_mod  Mylib.kicad_sym  NRJ6HM-1-PRE.kicad_mod  NRJ6HM-1-PRE.step  PJ-320D.kicad_mod  PJ-320D.step  QFN-60-1EP_7x7mm_P0.4mm_EP3.4x3.4mm.step  SOD-123FL.kicad_mod  TAC5112.kicad_mod  TAC5242.kicad_mod  UFDFPN5.kicad_mod  WR-DC-2.1.step  WS2812B-4020.kicad_mod  XUNPU TYPEC-305.kicad_mod  ZX-QC1212.kicad_mod
Hardware/usb-stomp/: midi.kicad_sch  rp2354.kicad_sch  tac5242.kicad_sch  usb-stomp.kicad_pcb  usb-stomp.kicad_prl  usb-stomp.kicad_pro  usb-stomp.kicad_sch
Jacks/: Jacks.kicad_pcb  Jacks.kicad_prl  Jacks.kicad_pro  Jacks.kicad_sch  Jacks.wbk  input.kicad_sch  output.kicad_sch  sim.kicad_sch
Models/: CK-6.35-308.scad  CK-6.35-308.step  DaisySeed.scad  FS5700.scad  FS5700.step  NRJ6HM-1-PRE.scad  NRJ6HM-1-PRE.step  PBS-24-102P.scad  PBS-24-102P.step  PJ-320A.scad  Pot-9mm.scad  Pot-Basic.scad  Stomp.scad  WR-DC-2.1.FCStd  WR-DC-2.1.scad  WR-DC-2.1.step
Mylib.pretty/: 125B.kicad_mod  1590A.kicad_mod  1590B-lid.step  1590B.kicad_mod  1590LB.kicad_mod  3PDT-Stomp-Switch.kicad_mod  Bourns_3362S.kicad_mod  CK-6.35-308.step  CK-6.35.kicad_mod  C_0704_1810Metric.kicad_mod  DaisySeed.kicad_mod  DaisySeed.step  FS5700.step  FS5700DPMT2B2M2QE.kicad_mod  LPD5030.kicad_mod  M3x10-Screw.step  M3x5.74-Insert.step  NRJ6HM-1-PRE.kicad_mod  PBS-24-102P.kicad_mod  PBS-24-102P.step  PJ-320A.kicad_mod  PJ-320A.step  Pot-9mm.step  Pot-Basic.step  Potentiometer-Basic.kicad_mod  Potentiometer_9mm_MP.kicad_mod  Potentiometer_9mm_MP_Low_profile.kicad_mod  SOT-23-THIN-14.kicad_mod  Stereo-6.35.kicad_mod  Stomp.step  TAC5112.kicad_mod  Tayda A-7797.kicad_mod  Tayda Toggle SPDT.kicad_mod  WR-DC-2.1.step  Wurth WR-DC 2.1mm Power Jack.kicad_mod  Wurth-Reverse-Mount-LED.kicad_mod
Pots/: Pots.kicad_pcb  Pots.kicad_prl  Pots.kicad_pro  Pots.kicad_sch  sym-lib-table
RP2354A/: RP2354A.kicad_pcb  RP2354A.kicad_prl  RP2354A.kicad_pro  RP2354A.kicad_sch  RP2354A.wbk  rpi2354.kicad_sch  sim.kicad_sch  tac5112.kicad_sch
RP2354A/src/: .gitignore  CMakeLists.txt  Makefile  biquad.h  blink.c  board.h  echo.h  effect.h  flanger.c  flanger.h  fm.h  gensin.c  i2s.pio  lfo.c  lfo.h  notch.h  tac5112.h  test_sincos.c  util.h
Software/: .gitignore  CMakeLists.txt  Makefile  blink.c  eeprom.h  font_6x8.h  font_8x16.h  midi.h  sh1106.h  status.h  switch.h  tuner.h  tuner_ui.h  uart.h  ui.h  usb-audio.c  usb-audio.h  usb-device.c  usb-host.c  usb-sync.h
Software/WebMIDI/: .gitignore  app.js  index.html  manifest.json  server.py  service-worker.js  style.css
Software/audio/: analyze.h  biquad.h  boost.h  compressor.h  echo.h  effect.h  envelope.h  eq.h  fft.h  flanger.h  gate.h  lfo.h  phaser.h  pitch.h  preamp.h  process.h  reverb.h  single-pole.h  tac5112.h  tremolo.h  types.h  usb.h  util.h  vibrato.h
Software/effects/: boost.h  cabsim.h  compressor.h  echo.h  eq.h  flanger.h  frenchie.h  gate.h  klon.h  parametric_eq.h  phaser.h  pitch.h  preamp.h  reverb.h  settings.h  tremolo.h  usb.h  vibrato.h
Software/include/: board.h  tusb_config.h
Software/pio/: debounce.pio  i2s.pio  rotary.pio  ws2812.pio
Software/scripts/: eq-w0.py  gen_effects.py  log2.py  pow2.py  quarter_sine.py
Stomp/: Stomp.kicad_pcb  Stomp.kicad_prl  Stomp.kicad_pro  Stomp.kicad_sch
Template/: 1590B.scad
Validation/: .gitignore  Makefile  test-fft.c  visualize.py
spice/: BAT54S.lib  BC846A.lib  BC847C.lib  BC857C.lib  DMC3071LVT.lib  DMMT5401.lib  DMN3060LVT.lib  DMP3164LVT.lib  MBT2222ADW.lib  MMBD1203.lib  MMBF5103.lib  MMBFJ201.lib  NMB2227A.lib  PMV250EPEA.lib  single1655.lib
symbols/: BAT41.lib  BAT54S.lib  DMC3071LVT.lib  DMMT5551.lib  DMN3060LVT.lib  DMP3164LVT.lib  LS844.lib  MBT2222ADW.lib  Mylib.kicad_sym  PMV250EPEA.lib
tests/: test_invariant_visualize.py
